<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KnittingHelp</string>

    <string name="bugs_mail">nth.development@gmail.com</string>
    <string name="comments_mail">nth.development@gmail.com</string>

    <string name="db_name">knitting</string>

    <string-array name="options_array">
        <item>Principal</item>
        <item>Configuración</item>
    </string-array>

    <string name="main_title">KnittingHelp</string>
    <string name="create_pattern_title">Nuevo modelo</string>
    <string name="patterns_list_title">Modelos</string>
    <string name="settings_title">Configuración</string>

    <string name="drawer_open">Abrir menú de navegación</string>
    <string name="drawer_close">Cerrar menú de navegación</string>

    <string name="global_ok">Aceptar</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_save">Guardar</string>
    <string name="global_edit">Modificar</string>
    <string name="global_delete">Eliminar</string>
    <string name="global_continuar">Continuar</string>
    <plurals name="global_n_selected">
        <item quantity="one">1 seleccionado</item>
        <item quantity="other">%1$s seleccionados</item>
    </plurals>

    <string name="dialog_btn_cerrar">Cerrar</string>
    <string name="help_help">Ayuda</string>
    <string name="search_btn_label">Buscar</string>

    <string name="new_pattern">Nuevo modelo</string>
    <plurals name="delete_n_patterns_dlg_message">
        <item quantity="one">¿Está seguro de querer eliminar este modelo?</item>
        <item quantity="other">¿Está seguro de querer eliminar %1$s modelos?</item>
    </plurals>
    <plurals name="delete_n_patterns_dlg_title">
        <item quantity="one">Eliminar modelo</item>
        <item quantity="other">Eliminar %1$s modelos?</item>
    </plurals>
    <string name="pattern_deleted">Modelo eliminado</string>
    <string name="pattern_saved">Modelo guardado</string>

    <string name="pattern_reset_dlg_message">¿Está seguro de querer insertar nuevamente los modelos por defecto?</string>
    <string name="pattern_reset_dlg_title">Volver a cargar modelos por defecto</string>
    <string name="pattern_reset_done">Modelos por defecto insertados correctamente.</string>

    <string name="pattern_info_title">Modelo</string>
    <string name="pattern_info_start">Empezar</string>
    <string name="pattern_info_continue">Continuar</string>

    <string name="settings_btn_label">Config.</string>
    <string name="pattern_name">Nombre</string>
    <string name="pattern_content">Contenido del modelo</string>

    <string name="pattern_title_validation_error">Por favor escriba el nombre del modelo</string>
    <string name="pattern_content_validation_error">Por favor escriba el contenido del modelo</string>

    <string name="date_format_value_default">dd-MM-yyyy HH:mm</string>
    <string name="settings_pattern_reload_title">Recargar</string>
    <string name="settings_pattern_reload_summary">Recarga los modelos por defecto</string>
    <string name="settings_date_formats_title">Formato de fecha</string>
    <string name="settings_date_formats_summary">Formato para mostrar las fechas</string>
    <string name="counters_title">Contador</string>
    <string name="global_max">Máx.</string>
    <string name="counters_1">Contador 1</string>
    <string name="counters_2">Contador 2</string>
    <string name="global_add_pic">Agregar foto</string>
    <string name="global_acciones">Acciones</string>
    <string name="cab_seccion_linea">Hacer línea</string>
    <string name="cab_seccion_duplicar">Duplicar</string>
    <string name="cab_seccion_editar">Editar</string>
    <string name="cab_linea_split">Dividir</string>
    <string name="cab_linea_join">Unir</string>
    <string name="cab_linea_new">Nueva línea</string>
    <string name="cab_seccion_new">Nueva sección</string>
    <string name="global_set_active">Establecer como activo</string>

    <string name="pttern_view_dialog_edit_title">Editar</string>
    <string name="pttern_view_dialog_edit_contenido">Al editar un modelo se reiniciará la posición actual. Desea continuar?</string>

    <string name="global_punto">.   Punto</string>
    <string name="global_coma">,   Coma</string>
    <string name="global_punto_coma">;   Punto y coma</string>
    <string name="global_parentesis">( ) Paréntesis</string>
    <string name="global_corchetes">[ ] Corchetes</string>
    <string name="global_llaves">{ } Llaves</string>

    <string name="view_font_size_increase">Aumentar tamaño de letra</string>
    <string name="view_font_size_decrease">Disminuir tamaño de letra</string>
    <string name="set_counters_title">Modificar contador</string>
    <string name="set_counters_message">Ingrese el nuevo valor del contador</string>
    <string name="pattern_view_inicio_seccion">Inicio de sección</string>
    <string name="pattern_view_paso_anterior">Paso anterior</string>
    <string name="pattern_view_paso_siguiente">Siguiente paso</string>
    <string name="pattern_view_seccion_siguiente">Siguiente sección</string>
    <string name="pattern_view_show_hide_counters">Mostrar/Ocultar contadores</string>
    <string name="global_minus_sign">-</string>
    <string name="global_counter_start">1</string>
    <string name="settings_keep_screen_on_title">Mantener la pantalla encendida</string>
    <string name="settings_keep_screen_on_summary">Mantiene la pantalla encendida mientras trabaja en un modelo</string>

</resources>