<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <EditText
        android:id="@+id/create_pattern_name"

        android:hint="@string/pattern_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/create_pattern_name"
        android:layout_above="@+id/create_pattern_btn_save">

        <EditText
            android:id="@+id/create_pattern_content"

            android:hint="@string/pattern_content"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:gravity="top"

            android:layout_below="@id/create_pattern_name" />
    </ScrollView>

    <Button
        android:id="@+id/create_pattern_btn_save"

        android:drawableLeft="@drawable/ic_action_save"

        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/button_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_save"
        android:layout_marginTop="5dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/create_pattern_btn_cancel"

        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/button_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_cancel"
        android:layout_marginTop="5dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>