<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/counters_txt_name1"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counters_1"

            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/counters_btn_inc1"

            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            android:text="@string/global_counter_start"
            android:textSize="40sp"
            android:textStyle="bold"
            android:background="@drawable/button_green"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"

            android:layout_marginTop="10dp"
            android:layout_below="@id/counters_txt_name1"
            android:layout_centerInParent="true"
            android:longClickable="true" />

        <Button
            android:id="@+id/counters_btn_dec1"

            android:layout_width="wrap_content"
            android:layout_height="@android:dimen/thumbnail_height"
            android:text="@string/global_minus_sign"
            android:textSize="40sp"
            android:textStyle="bold"
            android:background="@drawable/button_red"

            android:layout_alignBottom="@id/counters_btn_inc1"
            android:layout_toLeftOf="@id/counters_btn_inc1"
            android:layout_toStartOf="@id/counters_btn_inc1" />

        <EditText
            android:id="@+id/counters_txt_max1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/global_max"

            android:layout_alignTop="@+id/counters_btn_inc1"
            android:layout_toRightOf="@+id/counters_btn_inc1"
            android:layout_toEndOf="@+id/counters_btn_inc1" />

        <EditText
            android:id="@+id/counters_txt_name2"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counters_2"

            android:layout_marginTop="25dp"
            android:layout_below="@id/counters_btn_inc1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/counters_btn_inc2"

            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            android:text="@string/global_counter_start"
            android:textSize="40sp"
            android:textStyle="bold"
            android:background="@drawable/button_green"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"

            android:layout_marginTop="10dp"
            android:layout_below="@id/counters_txt_name2"
            android:layout_centerInParent="true"
            android:longClickable="true" />

        <Button
            android:id="@+id/counters_btn_dec2"

            android:layout_width="wrap_content"
            android:layout_height="@android:dimen/thumbnail_height"
            android:text="@string/global_minus_sign"
            android:textSize="40sp"
            android:textStyle="bold"
            android:background="@drawable/button_red"

            android:layout_alignBottom="@id/counters_btn_inc2"
            android:layout_toLeftOf="@id/counters_btn_inc2"
            android:layout_toStartOf="@id/counters_btn_inc2" />

        <EditText
            android:id="@+id/counters_txt_max2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/global_max"

            android:layout_alignTop="@+id/counters_btn_inc2"
            android:layout_toRightOf="@+id/counters_btn_inc2"
            android:layout_toEndOf="@+id/counters_btn_inc2" />
    </RelativeLayout>
</ScrollView>